css file linked

--- a/Task_2/index.html
+++ b/Task_2/index.html
@@ -4,153 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
-    <style>
-      :root {
-        --font-color: grey;
-      }
 
-      body {
-        margin: 0;
-        padding: 0 150px;
-        font-family: Tahoma, Verdana, sans-serif;
-      }
-
-      sup {
-        color: red;
-      }
-      /* Header */
-      .header-img {
-        display: flex;
-        justify-content: space-between;
-        justify-items: center;
-        height: 100px;
-      }
-
-      #nav-menu {
-        display: flex;
-        gap: 30px;
-        background-color: lightgrey;
-        border-top: 1px solid gray;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        list-style: none;
-        height: 30px;
-        align-items: center;
-        font-size: 20px;
-        margin: 0px 0px;
-      }
-
-      /* Main */
-      .m-h1 {
-        display: flex;
-        background-color: whitesmoke;
-        font-weight: 300;
-        color: orange;
-        padding: 0px 20px;
-        height: 50px;
-        align-items: center;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom: 1px solid gray;
-      }
-
-      .m-h3 h3 {
-        padding: 0px 20px;
-        color: gray;
-        font-weight: 300;
-        margin-bottom: 0px;
-      }
-
-      .m-h3 small {
-        flex-direction: row;
-        gap: 2px;
-        padding: 0px 20px;
-        color: gray;
-        font-weight: 300;
-        border-bottom: 1px dashed #ccc;
-      }
-
-      .flex {
-        display: flex;
-        color: var(--font-color);
-      }
-
-      .form-left {
-        padding: 0px 20px;
-        width: 100%;
-      }
-
-      .form-right {
-        padding: 0px 20px;
-        width: 100%;
-        border-left: 1px solid gray;
-      }
-
-      .g-font {
-        color: var(--font-color);
-      }
-
-      small {
-        color: var(--font-color);
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 10px;
-      }
-
-      .form-wrapper {
-        display: flex;
-        justify-content: space-between;
-        padding-top: 20px;
-      }
-
-      input,
-      select {
-        width: 100%;
-        height: 30px;
-        background-color: white;
-        border: 1px solid lightgray;
-        box-sizing: border-box;
-      }
-
-      .gender {
-        display: flex;
-        width: 100px;
-        gap: 10px;
-        align-items: center;
-      }
-
-      label {
-        padding-top: 10px;
-      }
-
-      .button {
-        display: flex;
-        justify-content: center;
-        padding: 50px 0px;
-      }
-
-      .button button {
-        font-size: 30px;
-        color: gold;
-        background-color: #da291c;
-        border-radius: 10px;
-      }
-
-      #footer-container {
-        background-color: whitesmoke;
-        text-align: center;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-      }
-
-      .copy {
-        padding: 2px 0px;
-      }
-
-      .copy h5 {
-        font-weight: 300;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- ======== Header ======== -->
